nixidy/generated/prod/excalidraw/Deployment-excalidraw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: excalidraw
    app.kubernetes.io/instance: excalidraw
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: excalidraw
  name: excalidraw
  namespace: home
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: excalidraw
      app.kubernetes.io/instance: excalidraw
      app.kubernetes.io/name: excalidraw
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: excalidraw
        app.kubernetes.io/instance: excalidraw
        app.kubernetes.io/name: excalidraw
    spec:
      automountServiceAccountToken: false
      containers:
        - image: excalidraw/excalidraw:latest@sha256:f7ee194addd607bf831d2af0f0a34463dd4225e426cf35199ef0b12a803398e9
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          name: excalidraw
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: excalidraw
